# hskgrader

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: hsk2-0.csv  hsk_dict_expansion.csv  updated_new_hsk3-0.csv
data/texts/hsk5/: text2.txt  text3.txt
data/texts/hsk6/: text1.txt  text10.txt  text11.txt  text5.txt  text6.txt  text7.txt
hskgrader/: constants.py  helpers.py  hsk_grader_statistics.py  main.py
hskgrader/data/: new_hsk3-0.csv
hskgrader/data/texts/hsk5/: text4.txt
hskgrader/data/texts/hsk6/: text2.txt  text3.txt
hskgrader/static/: new_hsk2-0.csv
hskgrader/static/texts/hsk5/: text1.txt  text5.txt
hskgrader/static/texts/hsk6/: text4.txt  text8.txt  text9.txt
locales/en/LC_MESSAGES/: hskgrader.mo  hskgrader.po
locales/fr/LC_MESSAGES/: hskgrader.mo  hskgrader.po
